Add PrismJS assets and update project metadata

--- a/Cameek.W3CssJs.PrismJs.csproj
+++ b/Cameek.W3CssJs.PrismJs.csproj
@@ -1,9 +1,25 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
     <PropertyGroup>
+        <!-- Compiler Settings -->
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <RazorLangVersion>8.0</RazorLangVersion>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+
+        <!-- NuGet Metadata -->
+        <PackageId>Cameek.W3CssJs.PrismJs</PackageId>
+        <Version>1.30.0</Version>
+        <Authors>Cameek</Authors>
+        <Company>Cameek</Company>
+        <Description>Static Razor Class Library with PrismJS assets for syntax highlighting in Blazor WebAssembly and Blazor Server apps.</Description>
+        <PackageTags>blazor;prismjs;syntax-highlighting;razor-class-library;webassets</PackageTags>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <RepositoryUrl>https://github.com/cameekorg/Cameek.W3CssJs.PrismJs</RepositoryUrl>
+        <PackageProjectUrl>https://github.com/cameekorg/Cameek.W3CssJs.PrismJs</PackageProjectUrl>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     </PropertyGroup>
 
 
@@ -12,7 +28,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.13"/>
+        <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.0"/>
     </ItemGroup>
 
 </Project>
