Refactor publish-nuget.yml for improved project path consistency

--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -12,20 +12,17 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-
+    
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.0.x'
-
+    
       - name: Restore Dependencies
-        run: dotnet restore ./Cameek.W3CssJs.PrismJs.csproj
-
+        run: dotnet restore Cameek.W3CssJs.PrismJs.csproj
+    
       - name: Build Project
-        run: dotnet build --configuration Release ./Cameek.W3CssJs.PrismJs.csproj
-
+        run: dotnet build --configuration Release Cameek.W3CssJs.PrismJs.csproj
+    
       - name: Pack NuGet Package
-        run: dotnet pack --configuration Release ./Cameek.W3CssJs.PrismJs.csproj --output ./nuget-packages
-
-      - name: Push to NuGet.org
-        run: dotnet nuget push ./nuget-packages/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+        run: dotnet pack --configuration Release Cameek.W3CssJs.PrismJs.csproj --output ./nuget-packages
