--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -26,3 +26,6 @@ jobs:
     
       - name: Pack NuGet Package
         run: dotnet pack --configuration Release Cameek.W3CssJs.PrismJs.csproj --output ./nuget-packages
+
+      - name: Push to NuGet.org
+        run: dotnet nuget push ./nuget-packages/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
