--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -19,13 +19,13 @@ jobs:
           dotnet-version: '8.0.x'
 
       - name: Restore Dependencies
-        run: dotnet restore ./Cameek.W3CssJs.PrismJs/Cameek.W3CssJs.PrismJs.csproj
+        run: dotnet restore ./Cameek.W3CssJs.PrismJs.csproj
 
       - name: Build Project
-        run: dotnet build --configuration Release ./Cameek.W3CssJs.PrismJs/Cameek.W3CssJs.PrismJs.csproj
+        run: dotnet build --configuration Release ./Cameek.W3CssJs.PrismJs.csproj
 
       - name: Pack NuGet Package
-        run: dotnet pack --configuration Release ./Cameek.W3CssJs.PrismJs/Cameek.W3CssJs.PrismJs.csproj --output ./nuget-packages
+        run: dotnet pack --configuration Release ./Cameek.W3CssJs.PrismJs.csproj --output ./nuget-packages
 
       - name: Push to NuGet.org
         run: dotnet nuget push ./nuget-packages/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
